Add TimeBeaconReceiverService to set clock over the air
If the user chooses (via settings) to sync the time via BLE, then ignore
the Android system clock and instead scan for Bluetooth beacons containing
the current time.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
         </activity>
         <activity android:name="de.andreas1724.bigdigitalclock.ClockPreferenceActivity"
             android:theme="@style/AppTheme.ActionBar"/>
+        <service
+            android:name=".TimeBeaconReceiverService"
+            android:enabled="true"></service>
     </application>
 
 </manifest>
